# collector-to-emulator

./: .gitignore  Makefile  README.md  pyproject.toml  release.env  sonar-project.properties  tox.ini
scripts/: set-version.sh
src/collector_to_emulator/: cli.py  jsonl.py  scenario_export.py  scenario_yaml.py
src/collector_to_mocker/: cli.py
testings/: collector.jsonl
tests/: test_cli.py  test_jsonl.py  test_scenario_export.py  test_scenario_yaml.py
tests/expected-output/: cli-help.txt  cli-help312.txt  cli-version.txt  cli-wrong-options.txt
