[project]
name = "collector_to_emulator"
version = "1.0.0"
description = "Convert kafka-collector JSONL output into kafka-emulator scenario YAML"
authors = [
    {name = "Siak Hooi",email = "siakhooi@gmail.com"}
]
keywords = [
    "kafka",
    "kafka-emulator",
    "jsonl",
    "yaml",
    "converter",
    "cli",
    "testing",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Testing",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]

license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.urls]
homepage = "https://github.com/siakhooi/collector-to-emulator"
repository = "https://github.com/siakhooi/collector-to-emulator"
documentation = "https://github.com/siakhooi/collector-to-emulator/wiki"
"Bug Tracker" = "https://github.com/siakhooi/collector-to-emulator/issues"

[project.scripts]
collector-to-emulator = 'collector_to_emulator.cli:run'


[tool.poetry]
packages = [{include = "collector_to_emulator", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
flake8 = "^7.2.0"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "-ra -q"

[tool.coverage.run]
source = [
    "collector_to_emulator",
]

[tool.coverage.paths]
source = [
  "src/collector_to_emulator",
  ".tox/*/lib/python*/site-packages/collector_to_emulator"
]
